feat: add icon logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
     type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/icon-font.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -46,7 +47,7 @@
   </div>
   <header class="header">
     <div class="header__logo-box">
-      <img src="assets//logo.svg" alt="Logo" class="header__logo">
+      <i class="material-icons header__logo">code</i>
     </div>
 
     <div class="header__text-box">
@@ -225,7 +226,7 @@
   <!-- * footer -->
   <footer class="footer">
     <div class="container text-center">
-      <i class="icon-basic-anchor"></i>
+      <i class="material-icons">code</i>
       <div class="footer__title-box mb-md">
         <h3 class="heading-secondary footer__title">SHIGA</h3>
       </div>
