--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="navigation">
+  <!-- <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
     <label for="navi-toggle" class="navigation__button">
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </nav>
-  </div>
+  </div> -->
   <header class="header">
     <div class="header__logo-box">
       <i class="material-icons header__logo">code</i>
