--- a/index.html
+++ b/index.html
@@ -242,6 +242,17 @@
     </div>
 
   </footer>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149483264-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-149483264-2');
+  </script>
+
 </body>
 
 </html>
