feature: add navigation

--- a/index.html
+++ b/index.html
@@ -46,9 +46,28 @@
     </nav>
   </div> -->
   <header class="header">
-    <div class="header__logo-box">
-      <i class="material-icons header__logo">code</i>
-    </div>
+    <nav class="navigation">
+      <div class="navigation__logo-box">
+        <i class="material-icons navigation__logo">code</i>
+      </div>
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a href="#about" class="navigation__link">
+            About me
+          </a>
+        </li>
+        <li class="navigation__item">
+          <a href="#knowledge" class="navigation__link">
+            knowledge
+          </a>
+        </li>
+        <li class="navigation__item">
+          <a href="#projects" class="navigation__link">
+            My Projects
+          </a>
+        </li>
+      </ul>
+    </nav>
 
     <div class="header__text-box">
       <h1 class="heading-primary">
@@ -83,7 +102,7 @@
         <div class="row around-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="card text-center">
-              <i class="icon-basic-settings"></i>
+              <i class="icon-code material-icons">code</i>
               <h3 class="card__title">Developer</h3>
               <div class="card__body">
                 <ul>
@@ -100,7 +119,7 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="card text-center">
-              <i class="icon-basic-photo"></i>
+              <i class="icon-camera material-icons">camera_alt</i>
               <h3 class="card__title">Photographer</h3>
               <div class="card__body">
                 <ul>
