feat: add tabbar

--- a/index.html
+++ b/index.html
@@ -16,41 +16,17 @@
 </head>
 
 <body>
-  <!-- <div class="navigation">
-    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-
-    <label for="navi-toggle" class="navigation__button">
-      <span class="navigation__icon">&nbsp;</span>
-    </label>
-
-    <div class="navigation__background">&nbsp;</div>
-
-    <nav class="navigation__nav">
-      <ul class="navigation__list">
-        <li class="navigation__item">
-          <a href="#about" class="navigation__link">
-            <span> -</span>About me
-          </a>
-        </li>
-        <li class="navigation__item">
-          <a href="#knowledge" class="navigation__link">
-            <span> -</span>knowledge
-          </a>
-        </li>
-        <li class="navigation__item">
-          <a href="#projects" class="navigation__link">
-            <span> -</span>My Projects
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div> -->
   <header class="header">
     <nav class="navigation">
       <div class="navigation__logo-box">
         <i class="material-icons navigation__logo">code</i>
       </div>
       <ul class="navigation__list">
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">
+            Home
+          </a>
+        </li>
         <li class="navigation__item">
           <a href="#about" class="navigation__link">
             About me
@@ -259,8 +235,36 @@
         Developed by me © 2020
       </div>
     </div>
-
   </footer>
+
+  <nav class="tabbar">
+    <ul class="tabbar__list">
+      <li class="tabbar__item">
+        <a href="#" class="tabbar__link">
+          <i class="material-icons">house</i>
+          Home
+        </a>
+      </li>
+      <li class="tabbar__item">
+        <a href="#about" class="tabbar__link">
+          <i class="material-icons">face</i>
+          About me
+        </a>
+      </li>
+      <li class="tabbar__item">
+        <a href="#knowledge" class="tabbar__link">
+          <i class="material-icons">school</i>
+          knowledge
+        </a>
+      </li>
+      <li class="tabbar__item">
+        <a href="#projects" class="tabbar__link">
+          <i class="material-icons">grade</i>
+          My Projects
+        </a>
+      </li>
+    </ul>
+  </nav>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149483264-2"></script>
