--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row around-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="card text-center">
-              <i class="icon-code material-icons">code</i>
+              <i class="icon-code material-icons" aria-label="icon code">code</i>
               <h3 class="card__title">Developer</h3>
               <div class="card__body">
                 <ul>
@@ -95,7 +95,7 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="card text-center">
-              <i class="icon-camera material-icons">camera_alt</i>
+              <i class="icon-camera material-icons" aria-label="icon camera">camera_alt</i>
               <h3 class="card__title">Photographer</h3>
               <div class="card__body">
                 <ul>
@@ -104,7 +104,7 @@
                   <li>Nikon 70-300mm 4.5-6.3</li>
                   <li>Sigma 17-70mm 2.8-4</li>
                   <li><a href="https://www.instagram.com/shiga.photos/" target="_blank">@shiga.photos</a></li>
-                  <li><a href="https://unsplash.com/@rshiga" target="_blank">Wallpapers</a></li>
+                  <li><a href="https://unsplash.com/@rshiga" target="_blank">Unsplash</a></li>
                 </ul>
               </div>
             </div>
