feature: update informations

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                   <li>Javascript</li>
                   <li>Angular</li>
                   <li>ReactJS</li>
-                  <li>MySQL</li>
+                  <li>NodeJS</li>
+                  <li>Database</li>
                   <li>PHP</li>
                 </ul>
               </div>
