feat: add repository section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,30 @@
         </div>
       </div>
     </section>
+
+    <!-- * -->
+    <section class="repositories">
+
+      <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+          <source src="assets/video.mp4" type="video/mp4">
+          Your browser is not supported!
+        </video>
+      </div>
+
+      <div class="container">
+
+        <div class="repositories__card">
+          <div class="text-center">
+            <h3 class="heading-secondary mb-lg">
+              Repositories
+            </h3>
+          </div>
+          <ul class="repositories__list" id="repo-list"></ul>
+        </div>
+      </div>
+
+    </section>
   </main>
   <!-- * footer -->
   <footer class="footer">
@@ -276,6 +300,8 @@
 
     gtag('config', 'UA-149483264-2');
   </script>
+
+  <script src="js/main.js"></script>
 
 </body>
 
