feat(repositories): change title

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="repositories__card">
           <div class="text-center">
             <h3 class="heading-secondary mb-lg">
-              Repositories
+              github
             </h3>
           </div>
 
