feat: add more description about me

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         </div>
         <p class="about__description">
           HI! I'm Rafael Shiga. Nice to meet you! <br>
-          I'm 26 years old. I live in São Paulo, Brazil.
+          I'm 26 years old. I live in São Paulo, Brazil. I'm a front-end developer. <br>
+          In my free time, I like to take pictures, watch series/movies/animes, <br>
+          listen to music/podcasts, eat and sleep <i class="material-icons"
+            aria-label="icon smile face">sentiment_satisfied_alt</i>
         </p>
       </div>
     </section>
