chore: organize folder

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
     type="text/css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/icon-font.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/icon-font.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -63,7 +63,7 @@
           ABOUT ME
         </h3>
         <div class="mb-md">
-          <img src="assets/photo.jpg" alt="Rafael" class="about__photo">
+          <img src="assets/img/photo.jpg" alt="Rafael" class="about__photo">
         </div>
         <p class="about__description">
           HI! I'm Rafael Shiga. Nice to meet you! <br>
@@ -227,7 +227,7 @@
 
       <div class="bg-video">
         <video class="bg-video__content" autoplay muted loop>
-          <source src="assets/video.mp4" type="video/mp4">
+          <source src="assets/img/video.mp4" type="video/mp4">
           Your browser is not supported!
         </video>
       </div>
@@ -311,7 +311,7 @@
     gtag('config', 'UA-149483264-2');
   </script>
 
-  <script src="js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
