feat: add new projects

--- a/index.html
+++ b/index.html
@@ -127,6 +127,37 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
               <div class="project-box">
+                <div class="project-box__image project-box__image--6">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--6">
+                    Shiga Project
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>
+                    HTML + CSS / SASS + JS <br>
+                    Showcase of my projects
+                  </p>
+                </div>
+                <div class="project-box__footer project-box__footer--6">
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <a href="https://rafashiga.github.io/" target="_blank">
+                        SITE
+                      </a>
+                    </div>
+                    <div class="col-xs-6">
+                      <a href="https://github.com/rafashiga/rafashiga.github.io" target="_blank">Github</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
                 <div class="project-box__image project-box__image--1">
                   &nbsp;
                 </div>
@@ -217,6 +248,89 @@
                 </div>
               </div>
             </div>
+            <!-- * -->
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--5">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--5">
+                    Be The Hero
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p><a href="https://rocketseat.com.br/" alt="_blank">Rocketseat</a> <br> OmniStack 11 - Be The Hero
+                  </p>
+                </div>
+                <div class="project-box__footer project-box__footer--5">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <a href="https://github.com/rafashiga/omnistack11-beTheHero" target="_blank">Github</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--7">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--7">
+                    codepen
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>
+                    random projects
+                  </p>
+                </div>
+                <div class="project-box__footer project-box__footer--7">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <a href="https://codepen.io/rafashiga" target="_blank">
+                        SITE
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--4">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--4">
+                    anisearch
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>ReactJS + <a href="https://jikan.moe/" alt="_blank">Jikan API</a></p>
+                  <p>search for information about your favorite anime</p>
+                </div>
+                <div class="project-box__footer project-box__footer--4">
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <a href="https://anisearch.netlify.app/" target="_blank">
+                        SITE
+                      </a>
+                    </div>
+                    <div class="col-xs-6">
+                      <a href="https://github.com/rafashiga/anisearch" target="_blank">Github</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+
           </div>
         </div>
       </div>
