feat: add new project

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   </span>
                 </h4>
                 <div class="project-box__body">
-                  <p>ReactJS + <a href="https://jikan.moe/" alt="_blank">Jikan API</a></p>
+                  <p>ReactJS + <a href="https://jikan.moe/" target="_blank">Jikan API</a></p>
                   <p>search for information about your favorite anime</p>
                 </div>
                 <div class="project-box__footer project-box__footer--4">
@@ -324,6 +324,35 @@
                     </div>
                     <div class="col-xs-6">
                       <a href="https://github.com/rafashiga/anisearch" target="_blank">Github</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--8">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--8">
+                    skyWeather
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>ReactJS + <a href="https://openweathermap.org/" target="_blank">OpenWeather API</a></p>
+                  <p>check today's weather forecast</p>
+                </div>
+                <div class="project-box__footer project-box__footer--8">
+                  <div class="row">
+                    <div class="col-xs-6">
+                      <a href="https://sky-weather.netlify.app/" target="_blank">
+                        SITE
+                      </a>
+                    </div>
+                    <div class="col-xs-6">
+                      <a href="https://github.com/rafashiga/weatherApp" target="_blank">Github</a>
                     </div>
                   </div>
                 </div>
