feat(home): new information added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <p class="about__description">
           HI! I'm Rafael Shiga. Nice to meet you! <br>
-          I'm 26 years old. I live in São Paulo, Brazil. I'm a front-end developer. <br>
+          I'm 27 years old. I live in São Paulo, Brazil. I'm a front-end developer. <br>
           In my free time, I like to take pictures, watch series/movies/animes, <br>
           listen to music/podcasts, eat and sleep <i class="material-icons"
             aria-label="icon smile face">sentiment_satisfied_alt</i>
@@ -353,6 +353,30 @@
                     </div>
                     <div class="col-xs-6">
                       <a href="https://github.com/rafashiga/weatherApp" target="_blank">Github</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--9">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--9">
+                    Next Level Week - Ecoleta
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>Project developed based on Rocketseat videos</p>
+                  <p>Back-end: Express, Front-end: ReactJS, Mobile: React Native</p>
+                </div>
+                <div class="project-box__footer project-box__footer--9">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <a href="https://github.com/rafashiga/nlw-ecoleta" target="_blank">Github</a>
                     </div>
                   </div>
                 </div>
