feat: add zerolac project

--- a/index.html
+++ b/index.html
@@ -383,6 +383,31 @@
               </div>
             </div>
             <!-- * -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="project-box">
+                <div class="project-box__image project-box__image--10">
+                  &nbsp;
+                </div>
+                <h4 class="project-box__heading">
+                  <span class="project-box__heading-span project-box__heading-span--10">
+                    Zerolac
+                  </span>
+                </h4>
+                <div class="project-box__body">
+                  <p>Information about Zero Lactose Milk</p>
+                  <p>Front-end: NextJS. Back-end: Strapi</p>
+                </div>
+                <div class="project-box__footer project-box__footer--10">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <a href="https://zerolac.netlify.app" target="_blank">Site</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- * -->
+
 
           </div>
         </div>
