feat: update instagram account

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <li>Nikon 50mm 1.8g</li>
                   <li>Nikon 70-300mm 4.5-6.3</li>
                   <li>Sigma 17-70mm 2.8-4</li>
-                  <li><a href="https://www.instagram.com/shiga.photos/" target="_blank">@shiga.photos</a></li>
+                  <li><a href="https://www.instagram.com/rafashiga/" target="_blank">@rafashiga</a></li>
                   <li><a href="https://unsplash.com/@rshiga" target="_blank">Unsplash</a></li>
                 </ul>
               </div>
@@ -453,7 +453,7 @@
         <h3 class="heading-secondary footer__title">SHIGA</h3>
       </div>
       <div class="footer__link-box">
-        <a href="https://www.instagram.com/shiga.photos/" target="_blank" class="footer__link">Instagram</a>
+        <a href="https://www.instagram.com/rafashiga/" target="_blank" class="footer__link">Instagram</a>
         <a href="https://www.linkedin.com/in/shiga-rafael?originalSubdomain=br" target="_blank"
           class="footer__link">LinkedIn</a>
         <a href="https://github.com/rafashiga" target="_blank" class="footer__link">Github</a>
